Fixed the mkw stats page having big white space

--- a/Wiimmfi/Refresh/Core.css
+++ b/Wiimmfi/Refresh/Core.css
@@ -146,3 +146,12 @@ b {
 .table10 {
     margin-left: -20px;
 }
+
+h1.narrow {
+    padding-top: 230px;
+    margin-top: -230px;
+}
+
+.table11 {
+    margin-top: -285px;
+}
